--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Notifications/Notifications.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Notifications/Notifications.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = "Notifications";
 }
 
+@{ 
+    Layout = "~/Views/Shared/_UsersLayout.cshtml";
+}
+
 <h2>Notifications</h2>
 
 <table class="table">
