--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_Layout.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_Layout.cshtml
@@ -6,71 +6,125 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/Custom.css" rel="stylesheet" />
-
 </head>
+
 <body id="bootstrap-overrides">
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+    @{
+        if (this.Request.IsAuthenticated)
+        {
+            <div class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li>@Html.ActionLink(" ", "Index", "Home", htmlAttributes: new { @class = "glyphicon glyphicon-home" })</li>
+                            @{
+                                var username = this.User.Identity.Name;
+
+                                <li>
+                                    @Html.ActionLink(
+                                        linkText: " ",
+                                        actionName: "Feed",
+                                        controllerName: "Home",
+                                        routeValues: null,
+                                        htmlAttributes: new { @class = "glyphicon glyphicon-random" }
+                                        )
+                                </li>
+                                <li>
+                                    @Html.ActionLink(
+                                        linkText: " ",
+                                        actionName: "Profile",
+                                        controllerName: "Users",
+                                        routeValues: new { username = username },
+                                        htmlAttributes: new { @class = "glyphicon glyphicon-user" }
+                                        )
+                                </li>
+                                <li>
+                                    @Html.ActionLink(
+                                        linkText: " ",
+                                        actionName: "All",
+                                        controllerName: "Notifications",
+                                        routeValues: null,
+                                        htmlAttributes: new { @class = "glyphicon glyphicon-flag" }
+                                        )
+                                </li>
+                            }
+                        </ul>
+                        @Html.Partial("_LoginPartial")
+                    </div>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    @{
-                        if (this.Request.IsAuthenticated)
-                        {
-                            var username = this.User.Identity.Name;
 
-                            <li>
+            <div class="container body-content">
+
+                <aside id="main-sidebar">
+                    <section class="sidebar-profile">
+                        <div class="sidebar-profile-header">
+                            <span class="sidebar-profile-header-username">
                                 @Html.ActionLink(
-                               linkText: "Feed",
-                               actionName: "Feed",
-                               controllerName: "Home",
-                               routeValues: null,
-                               htmlAttributes: null
-                               )
-                            </li>
-                            <li>
-                                @Html.ActionLink(
-                               linkText: "Profile",
-                               actionName: "Profile",
-                               controllerName: "Users",
-                               routeValues: new {username = username},
-                               htmlAttributes: null
-                               )
-                            </li>
-                            <li>
-                                @Html.ActionLink(
-                               linkText: "Notifications",
-                               actionName: "All",
-                               controllerName: "Notifications",
-                               routeValues: null,
-                               htmlAttributes: null
-                               )
-                            </li>
-                        }
-                    }
-                </ul>
-                @Html.Partial("_LoginPartial")
+                            linkText: "@" + User.Identity.Name,
+                            actionName: "Profile",
+                            controllerName: "Users",
+                            routeValues: new { username = User.Identity.Name },
+                            htmlAttributes: null)
+                            </span>
+                            @*<div class="sidebar-profile-stats">
+                                <div class="sidebar-stat-title">
+                                    <div class="sidebar-profile-stat">
+                                        @Html.ActionLink(
+                                    linkText: "Tweets",
+                                    actionName: "Tweets",
+                                    controllerName: "Users",
+                                    routeValues: new { username = User.Identity.Name },
+                                    htmlAttributes: null)
+                                    </div>
+                                </div>
+
+
+                                <div class="sidebar-stat-title">
+                                    <div class="sidebar-profile-stat">
+                                        @Html.ActionLink(
+                                    linkText: "Following",
+                                    actionName: "Following",
+                                    controllerName: "Users",
+                                    routeValues: new { username = User.Identity.Name },
+                                    htmlAttributes: null)
+                                    </div>
+                                </div>
+
+
+                                <div class="sidebar-stat-title">
+                                    <div class="sidebar-profile-stat">
+                                        @Html.ActionLink(
+                                    linkText: "Followers",
+                                    actionName: "Followers",
+                                    controllerName: "Users",
+                                    routeValues: new { username = User.Identity.Name },
+                                    htmlAttributes: null)
+                                    </div>
+                                </div>
+
+                            </div>*@
+                        </div>
+                    </section>
+                </aside>
+
+                @RenderBody()
+                <hr />
             </div>
-        </div>
-    </div>   
+        }        
+    }
 
-    <div class="container body-content">        
-
-        @RenderBody()
-        <hr />       
-    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-
     <script src="~/Scripts/tweets/tweets.js"></script>
 </body>
 </html>
