--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_Following.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_Following.cshtml
@@ -1,31 +1,29 @@
 ﻿@model IEnumerable<Twitter.Web.Models.ViewModels.UserTweetViewModel>
 
-<div id="profile-following">
+<div class="profile-following">
     @{
         if (Model.Count() != 0)
         {
             foreach (var item in Model)
             {
-                <div class="col-xs-6">
-                    <header class="row">
-                        <div class="col-md-1">
-                            <img class="user-avatar" src="@Url.Content(item.PictureUrl)" alt="Avatar" />
-                        </div>
-                        <h3 class="col-md-1">
-                            @{
-                                var username = item.UserName;
-                            }
+                <header class="row">
+                    <div class="col-md-1">
+                        <img class="user-avatar" src="@Url.Content(item.PictureUrl)" alt="Avatar" />
+                    </div>
+                    <h3 class="col-md-1">
+                        @{
+                            var username = item.UserName;
+                        }
 
-                            @Html.ActionLink(
-                        linkText: username,
-                        actionName: "Profile",
-                        controllerName: "Users",
-                        routeValues: new { username = username },
-                        htmlAttributes: null
-                   )
-                        </h3>
-                    </header>
-                </div>
+                        @Html.ActionLink(   
+                    linkText: username,
+                    actionName: "Profile",
+                    controllerName: "Users",
+                    routeValues: new { username = username },
+                    htmlAttributes: null
+                )
+                    </h3>
+                </header>
             }
         }
         else
