--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_FavoriteTweets.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_FavoriteTweets.cshtml
@@ -1,6 +1,6 @@
 ﻿@model  IEnumerable<Twitter.Web.Models.ViewModels.TweetViewModel>
 
-<div id="profile-favorite-tweets">
+<div class="tweets-container">
     @if (Model.Count() == 0)
     {
         <h2>This user hasn't favorited any tweets yet.</h2>
